yiltc/testsuite/negative/index_non_table.yilt
fn foo()
    let x = 42[0]
